--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -89,3 +89,22 @@ a:hover {
 .highlight {
     background-color: yellow;
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: black;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    cursor: grab;
+}
